@@ -31,17 +31,24 @@ Last-Update: 2012-01-13
  #define BuildDmxDevelTools	NO
 --- a/nx-X11/lib/Xinerama/Xinerama.c
 +++ b/nx-X11/lib/Xinerama/Xinerama.c
-@@ -249,6 +249,9 @@
+@@ -249,6 +249,16 @@
      xXineramaIsActiveReq  	*req;
      XExtDisplayInfo 		*info = find_display (dpy);
  
 +
-+    return True;
++    FILE* fptr;
++    if((fptr=fopen(getenv("NX_XINERAMA_CONF"),"r"))!=NULL) {
++	fclose(fptr);
++	return True;
++    }
++    else {
++	return False;
++    }
 +
      if(!XextHasExtension(info))
  	return False;  /* server doesn't even have the extension */
  
-@@ -279,39 +282,72 @@
+@@ -279,39 +289,72 @@
      xXineramaQueryScreensReq	*req;
      XineramaScreenInfo		*scrnInfo = NULL;
  
@@ -186,7 +193,7 @@ Last-Update: 2012-01-13
  	else
  #endif
 -	    result = (ProcXvStopVideo(client)); break;
-+	    result = (ProcXvStopVideo(client)); 
++	    result = (ProcXvStopVideo(client));
 +            break;
      case xv_SetPortAttribute: 
  #ifdef PANORAMIX
